revert a change in log config for yarn app